--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile("org.jetbrains.kotlin:kotlin-reflect:$kotlin_version")
     compile("com.fasterxml.jackson.module:jackson-module-kotlin:2.8.4")
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile("io.springfox:springfox-swagger2:2.6.0")
+    compile("io.springfox:springfox-swagger-ui:2.6.0")
     testCompile group: 'junit', name: 'junit', version: '4.10'
     testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
 	testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
